[project]
name = "finmate"
version = "0.1.0"
description = ""
authors = [
    {name = "Pvl1307",email = "ivanov.pavel.1307@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
